--- a/package.json
+++ b/package.json
@@ -29,11 +29,9 @@
   "author": "PiterWeb",
   "license": "ISC",
   "devDependencies": {
+    "reverui": "^0.4.2",
     "ts-node": "^10.9.2",
     "tsup": "^8.3.0",
     "typescript": "^5.6.2"
-  },
-  "dependencies": {
-    "reverui": "^0.4.2"
   }
 }
